--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.17.7",
+    "standard": "^17.1.2",
+    "ts-standard": "^12.0.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21"
+  },
+  "eslintConfig": {
+    "extends": "ts-standard"
   }
 }
