--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "standard": "^17.1.2",
+    "ts-node": "^10.9.2",
     "ts-standard": "^12.0.2",
     "typescript": "^5.6.2"
   },
@@ -20,6 +21,17 @@
     "lodash": "^4.17.21"
   },
   "eslintConfig": {
-    "extends": "ts-standard"
-  }
+    "extends": [
+      "standard",
+      "standard-with-typescript"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
+  },
+  "eslintIgnore": [
+    "node_modules/*",
+    "dist/*"
+  ]
 }
